# Template_SUPABASE_NEXTJS_FASTAPI

./: .gitignore  DEPENDENCIES_README.md  FINAL_STRUCTURE_README.md  MAKEFILE_README.md  Makefile  README.md  SCRIPTS_STRUCTURE_README.md  build.sh  deploy.sh  hello vps.sh  hello-vps.sh  setup.sh
.cursor/rules/: common-mistakes.mdc  project-config-rules.mdc  user-preferences-rules.mdc
.qoder/rules/: architecture-rules.md  best-practices.md  rules.md  security-rules.md
.setup/: .env.config.example
.setup/nginx/: backend.conf  frontend.conf  supabase.conf
.setup/scripts/: 00-install-dependencies.sh  00-setup-user.sh  01-setup.sh  02-build.sh  02-setup-user.sh  03-build.sh  03-deploy.sh  (+10 more)
backend/: .env.example  .gitignore  README.md  README_GUNICORN.md  gunicorn.conf.py  main.py  pyproject.toml  run.py  start_gunicorn.sh
backend/api/: app.py  config.py  main.py
backend/api/helpers/: __init__.py  auth.py  utils.py
backend/api/models/: __init__.py  auth.py  base.py  user.py
backend/api/schemas/: __init__.py  base.py  user.py
backend/api/views/: __init__.py  auth.py  base.py  user.py
docs/: COULEURS_GUIDE.md  OAUTH_SETUP.md  PRODUCTION_NOTES.md  SCRIPTS_MIGRATION_SUMMARY.md  SUPABASE_BACKUP_README.md  TROUBLESHOOTING_OAUTH.md
docs (AI generated, i need to sort that but it could be usefull idk)/: CLEANUP_SUMMARY.md  FRONTEND_ARCHITECTURE.md  FRONTEND_SHADCN_README.md  PRODUCTION_WORKFLOW_README.md  RUN_MODES.md  SCRIPTS_STRUCTURE_README.md
frontend/: .env.example  .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+50 files in other folders)
